[ADD] FE Costa Rica

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = jorels-odoo-addons
 	url = https://gitlab.com/jorels-community/jorels-odoo-addons.git
 	branch = 15.0
+[submodule "l10n_cr"]
+	path = l10n_cr
+	url = https://github.com/ivanporras/l10n_cr.git
+	branch = 15.0
